[gd_scene load_steps=32 format=2]

[ext_resource path="res://Levels/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/ButtonFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/HeaderFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sounds/Select.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Mouse.tscn" type="PackedScene" id=6]
[ext_resource path="res://Textures/Player.png" type="Texture" id=7]
[ext_resource path="res://Textures/Harvester.png" type="Texture" id=8]
[ext_resource path="res://Textures/Gun.png" type="Texture" id=9]
[ext_resource path="res://Textures/WallTile.png" type="Texture" id=10]
[ext_resource path="res://Textures/Zombie.png" type="Texture" id=11]
[ext_resource path="res://Textures/Nest.png" type="Texture" id=12]
[ext_resource path="res://Textures/Grabber.png" type="Texture" id=13]
[ext_resource path="res://Textures/GrabberHigh.png" type="Texture" id=14]
[ext_resource path="res://Textures/FloorTile.png" type="Texture" id=15]
[ext_resource path="res://Slider.tres" type="StyleBox" id=16]
[ext_resource path="res://SliderArea.tres" type="StyleBox" id=17]
[ext_resource path="res://Textures/ToggleOff.png" type="Texture" id=18]
[ext_resource path="res://Textures/ToggleOn.png" type="Texture" id=19]
[ext_resource path="res://SliderAreaHigh.tres" type="StyleBox" id=20]
[ext_resource path="res://Textures/BatBall.png" type="Texture" id=21]
[ext_resource path="res://Textures/Bullet.png" type="Texture" id=22]
[ext_resource path="res://Textures/Pointer.png" type="Texture" id=23]
[ext_resource path="res://Textures/Q.png" type="Texture" id=24]
[ext_resource path="res://Textures/WASD.png" type="Texture" id=25]
[ext_resource path="res://Textures/Mouse.png" type="Texture" id=26]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Kenney Mini Square.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -2
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -2
font_data = SubResource( 3 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]
layer = 0

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 0.444
margin_bottom = -7.87201
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect9" type="TextureRect" parent="Background"]
modulate = Color( 0, 0, 0, 0.392157 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -144.0
margin_top = 80.0
margin_right = -40.0
margin_bottom = 124.0
texture = ExtResource( 22 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect10" type="TextureRect" parent="Background"]
modulate = Color( 0, 0, 0, 0.392157 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 88.0
margin_right = 136.0
margin_bottom = 132.0
texture = ExtResource( 22 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect12" type="TextureRect" parent="Background"]
modulate = Color( 0, 0, 0, 0.392157 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -16.0
margin_right = -16.0
margin_bottom = 8.0
texture = ExtResource( 22 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect11" type="TextureRect" parent="Background"]
modulate = Color( 0, 0, 0, 0.392157 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 16.0
margin_right = 88.0
margin_bottom = 55.0
rect_scale = Vector2( 0.813267, 0.813267 )
texture = ExtResource( 22 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -40.0
margin_right = 72.0
margin_bottom = 36.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -32.0
margin_right = 150.0
margin_bottom = 118.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -88.0
margin_right = 49.0
margin_bottom = -19.0
rect_rotation = -15.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = 16.0
margin_right = 130.0
margin_bottom = 129.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -32.0
margin_right = -20.0
margin_bottom = 108.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect8" type="TextureRect" parent="Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -136.0
margin_right = -16.0
margin_bottom = -43.0
texture = ExtResource( 21 )
expand = true
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="Options" type="HBoxContainer" parent="MenuLayer"]
visible = false
anchor_left = 0.031
anchor_top = 0.056
anchor_right = 0.969
anchor_bottom = 0.944
margin_left = 0.127999
margin_top = -0.128
margin_right = -0.128021
margin_bottom = 0.127991
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MenuLayer/Options"]
visible = false
margin_right = 196.0
margin_bottom = 256.0
alignment = 1

[node name="Label" type="Label" parent="MenuLayer/Options/VBoxContainer2"]
margin_top = 43.0
margin_right = 196.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 4 )
text = "How to play:"

[node name="Label2" type="Label" parent="MenuLayer/Options/VBoxContainer2"]
margin_top = 77.0
margin_right = 196.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 1 )
text = "-Follow the arrows 
to the nests
-Deploy the harvester 
with 'Q'
-Repeat for all nests
-Escape!"

[node name="Spacer" type="MarginContainer" parent="MenuLayer/Options"]
visible = false
margin_right = 6.0
margin_bottom = 256.0

[node name="ColorRect2" type="ColorRect" parent="MenuLayer/Options/Spacer"]
margin_right = 6.0
margin_bottom = 256.0
rect_min_size = Vector2( 6, 0 )
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="MenuLayer/Options/Spacer"]
margin_left = 2.0
margin_right = 4.0
margin_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 2, 0 )
size_flags_horizontal = 4
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuLayer/Options"]
margin_left = 121.0
margin_right = 357.0
margin_bottom = 256.0
size_flags_horizontal = 6
alignment = 1

[node name="Label" type="Label" parent="MenuLayer/Options/VBoxContainer"]
margin_left = 71.0
margin_top = 46.0
margin_right = 164.0
margin_bottom = 109.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 4 )
text = "Options
"

[node name="MasterContainer" type="HBoxContainer" parent="MenuLayer/Options/VBoxContainer"]
margin_top = 113.0
margin_right = 236.0
margin_bottom = 133.0
size_flags_horizontal = 6
alignment = 1

[node name="Label" type="Label" parent="MenuLayer/Options/VBoxContainer/MasterContainer"]
margin_right = 72.0
margin_bottom = 20.0
rect_min_size = Vector2( 72, 0 )
custom_fonts/font = SubResource( 1 )
text = "Master"

[node name="MasterSlider" type="HSlider" parent="MenuLayer/Options/VBoxContainer/MasterContainer"]
margin_left = 76.0
margin_right = 236.0
margin_bottom = 16.0
grow_vertical = 0
rect_min_size = Vector2( 160, 0 )
focus_mode = 0
size_flags_horizontal = 3
custom_icons/grabber_highlight = ExtResource( 14 )
custom_icons/grabber = ExtResource( 13 )
custom_styles/slider = ExtResource( 16 )
custom_styles/grabber_area_highlight = ExtResource( 20 )
custom_styles/grabber_area = ExtResource( 17 )
max_value = 1.0
step = 0.05
value = 0.7

[node name="MusicContainer" type="HBoxContainer" parent="MenuLayer/Options/VBoxContainer"]
margin_top = 137.0
margin_right = 236.0
margin_bottom = 157.0
size_flags_horizontal = 6
alignment = 1

[node name="Label" type="Label" parent="MenuLayer/Options/VBoxContainer/MusicContainer"]
margin_right = 72.0
margin_bottom = 20.0
rect_min_size = Vector2( 72, 0 )
custom_fonts/font = SubResource( 1 )
text = "Music    "

[node name="MusicSlider" type="HSlider" parent="MenuLayer/Options/VBoxContainer/MusicContainer"]
margin_left = 76.0
margin_right = 236.0
margin_bottom = 16.0
rect_min_size = Vector2( 160, 0 )
focus_mode = 0
size_flags_horizontal = 3
custom_icons/grabber_highlight = ExtResource( 13 )
custom_icons/grabber = ExtResource( 13 )
custom_styles/slider = ExtResource( 16 )
custom_styles/grabber_area_highlight = ExtResource( 20 )
custom_styles/grabber_area = ExtResource( 17 )
max_value = 1.0
step = 0.05
value = 0.7

[node name="SoundContainer" type="HBoxContainer" parent="MenuLayer/Options/VBoxContainer"]
margin_top = 161.0
margin_right = 236.0
margin_bottom = 181.0
size_flags_horizontal = 6
alignment = 1

[node name="Label" type="Label" parent="MenuLayer/Options/VBoxContainer/SoundContainer"]
margin_right = 72.0
margin_bottom = 20.0
rect_min_size = Vector2( 72, 0 )
custom_fonts/font = SubResource( 1 )
text = "Sounds"

[node name="SoundSlider" type="HSlider" parent="MenuLayer/Options/VBoxContainer/SoundContainer"]
margin_left = 76.0
margin_right = 236.0
margin_bottom = 16.0
rect_min_size = Vector2( 160, 0 )
focus_mode = 0
size_flags_horizontal = 3
custom_icons/grabber_highlight = ExtResource( 13 )
custom_icons/grabber = ExtResource( 13 )
custom_styles/slider = ExtResource( 16 )
custom_styles/grabber_area_highlight = ExtResource( 20 )
custom_styles/grabber_area = ExtResource( 17 )
max_value = 1.0
step = 0.05
value = 0.7

[node name="FullscreenToggleContainer" type="HBoxContainer" parent="MenuLayer/Options/VBoxContainer"]
margin_top = 170.0
margin_right = 236.0
margin_bottom = 196.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MenuLayer/Options/VBoxContainer/FullscreenToggleContainer"]
margin_top = 3.0
margin_right = 188.0
margin_bottom = 23.0
rect_min_size = Vector2( 188, 0 )
custom_fonts/font = SubResource( 1 )
text = "Fullscreen  (f)"

[node name="FullScreenToggle" type="CheckButton" parent="MenuLayer/Options/VBoxContainer/FullscreenToggleContainer"]
margin_left = 192.0
margin_right = 236.0
margin_bottom = 26.0
focus_mode = 0
size_flags_horizontal = 9
custom_icons/off = ExtResource( 18 )
custom_icons/on = ExtResource( 19 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_constants/check_vadjust = 0
enabled_focus_mode = 0

[node name="Spacer" type="MarginContainer" parent="MenuLayer/Options/VBoxContainer"]
visible = false
margin_top = 190.0
margin_right = 236.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 16 )

[node name="Back" type="Button" parent="MenuLayer/Options/VBoxContainer"]
margin_left = 92.0
margin_top = 185.0
margin_right = 144.0
margin_bottom = 209.0
focus_mode = 0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="MenuLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="MenuLayer/Main"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -24.0
margin_right = -24.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 3 )
text = "Best: 0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="HBoxContainer" parent="MenuLayer/Main"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuLayer/Main/Main"]
margin_left = 163.0
margin_right = 349.0
margin_bottom = 288.0
alignment = 1

[node name="Title" type="Label" parent="MenuLayer/Main/Main/VBoxContainer"]
margin_right = 186.0
margin_bottom = 107.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.913725, 0.427451, 1, 1 )
text = "Cavern
Quake"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MenuLayer/Main/Main/VBoxContainer"]
margin_top = 111.0
margin_right = 186.0
margin_bottom = 288.0
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MenuLayer/Main/Main/VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 147.0
margin_bottom = 177.0
size_flags_vertical = 3
custom_constants/separation = 12
alignment = 1

[node name="Start" type="Button" parent="MenuLayer/Main/Main/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 108.0
margin_bottom = 46.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
text = "START"
flat = true

[node name="HowToPlay" type="Button" parent="MenuLayer/Main/Main/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 108.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
text = "how to play"
flat = true

[node name="Options" type="Button" parent="MenuLayer/Main/Main/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 108.0
margin_bottom = 118.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
text = "OPTIONS"
flat = true

[node name="Quit" type="Button" parent="MenuLayer/Main/Main/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 108.0
margin_bottom = 154.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
text = "QUIT"
flat = true

[node name="HowTo" type="Control" parent="MenuLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="MenuLayer/HowTo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -80.0
margin_right = -32.0
margin_bottom = -16.0
texture = ExtResource( 25 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuLayer/HowTo/TextureRect2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -3.14991
margin_right = 22.0
margin_bottom = 14.8501
custom_fonts/font = ExtResource( 3 )
text = "MOVE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="MenuLayer/HowTo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 8.0
margin_right = -32.0
margin_bottom = 57.0
texture = ExtResource( 26 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuLayer/HowTo/TextureRect3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -1.01027
margin_right = 24.0
margin_bottom = 16.9897
custom_fonts/font = ExtResource( 3 )
text = "SHOOT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="MenuLayer/HowTo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 80.0
margin_top = -88.0
margin_right = 112.0
margin_bottom = -55.0
texture = ExtResource( 23 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuLayer/HowTo/TextureRect4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -29.0
margin_top = -1.10173
margin_right = 29.0
margin_bottom = 16.8983
custom_fonts/font = ExtResource( 3 )
text = "Follow"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="MenuLayer/HowTo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 80.0
margin_top = 24.0
margin_right = 112.0
margin_bottom = 57.0
texture = ExtResource( 8 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuLayer/HowTo/TextureRect5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.0
margin_top = -0.980804
margin_right = 35.0
margin_bottom = 17.0192
custom_fonts/font = ExtResource( 3 )
text = "harvest"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MenuLayer/HowTo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = 80.0
margin_right = 144.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 4 )
text = "ESCAPE!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MenuLayer/HowTo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -120.0
margin_right = -22.0
margin_bottom = -92.0
custom_fonts/font = SubResource( 5 )
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="MenuLayer/HowTo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = -120.0
margin_right = 168.0
margin_bottom = -92.0
custom_fonts/font = SubResource( 5 )
text = "How to play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="MenuLayer/HowTo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -32.0
margin_right = 96.0
texture = ExtResource( 24 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="MenuLayer/HowTo/TextureRect6"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuLayer/HowTo/TextureRect6"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.1243
margin_top = -1.14854
margin_right = 27.8757
margin_bottom = 16.8515
custom_fonts/font = ExtResource( 3 )
text = "PLANT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MenuLayer/HowTo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = 96.0
margin_right = -156.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 3 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0
bus = "Sounds"

[node name="CanvasLayer3" parent="." instance=ExtResource( 6 )]

[connection signal="value_changed" from="MenuLayer/Options/VBoxContainer/MasterContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="MenuLayer/Options/VBoxContainer/MusicContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="MenuLayer/Options/VBoxContainer/SoundContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="pressed" from="MenuLayer/Options/VBoxContainer/FullscreenToggleContainer/FullScreenToggle" to="." method="_on_FullScreenToggle_pressed"]
[connection signal="pressed" from="MenuLayer/Options/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MenuLayer/Main/Main/VBoxContainer/HBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MenuLayer/Main/Main/VBoxContainer/HBoxContainer/VBoxContainer/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="MenuLayer/Main/Main/VBoxContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MenuLayer/Main/Main/VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="MenuLayer/HowTo/Button" to="." method="_on_ControlsBack_pressed"]
